--- a/ReHouse.FrontEnd/Views/Home/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/Home/Index.cshtml
@@ -89,7 +89,7 @@
                 </li>
             }
         </ul>
-        <a href="~/sale/flat" id="more">Подробнее</a>
+        <a href="~/sale/flat" class="moremore" id="more">Подробнее</a>
     </div>
     <div class="streak"></div>
 
