--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/Advert/_filters.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/Advert/_filters.cshtml
@@ -33,12 +33,13 @@
 
         <div class="_cost">
             <select id="price">
-                <option selected value="0">Цена</option>
+                @*<option selected value="0">Цена</option>*@
                 @for (int i = 0; i < Model.Prices.Count; i++)
                 {
                     if (ViewBag.Type == AdvertsType.Sale)
                     {
-                        if (i == 0)
+                        <option value="@Model.Prices[i].Min">от @Model.Prices[i].Min $</option>
+                        @*if (i == 0)
                         {
                             <option value="@Model.Prices[i].Id">до @Model.Prices[i].Max $</option>
                         }
@@ -49,11 +50,12 @@
                         else
                         {
                             <option value="@Model.Prices[i].Id">@Model.Prices[i].Min-@Model.Prices[i].Max $</option>
-                        }
+                        }*@
                     }
                     else if (ViewBag.Type == AdvertsType.Rent)
                     {
-                        if (i == 0)
+                        <option value="@Model.Prices[i].Min">от @Model.Prices[i].Min $</option>
+                        @*if (i == 0)
                         {
                             <option value="@Model.Prices[i].Id">до @Model.Prices[i].Max грн/мес</option>
                         }
@@ -64,7 +66,45 @@
                         else
                         {
                             <option value="@Model.Prices[i].Id">@Model.Prices[i].Min-@Model.Prices[i].Max грн/мес</option>
-                        }
+                        }*@
+                    }
+                }
+            </select>
+            <select id="price_max">
+                @*<option selected value="0">Цена</option>*@
+                @for (int i = 0; i < Model.Prices.Count; i++)
+                {
+                    if (ViewBag.Type == AdvertsType.Sale)
+                    {
+                        <option value="@Model.Prices[i].Min">до @Model.Prices[i].Min $</option>
+                        @*if (i == 0)
+                    {
+                        <option value="@Model.Prices[i].Id">до @Model.Prices[i].Max $</option>
+                    }
+                    else if (i == Model.Prices.Count - 1)
+                    {
+                        <option value="@Model.Prices[i].Id">свыше @Model.Prices[i].Min $</option>
+                    }
+                    else
+                    {
+                        <option value="@Model.Prices[i].Id">@Model.Prices[i].Min-@Model.Prices[i].Max $</option>
+                    }*@
+                    }
+                    else if (ViewBag.Type == AdvertsType.Rent)
+                    {
+                        <option value="@Model.Prices[i].Min">до @Model.Prices[i].Min $</option>
+                        @*if (i == 0)
+                    {
+                        <option value="@Model.Prices[i].Id">до @Model.Prices[i].Max грн/мес</option>
+                    }
+                    else if (i == Model.Prices.Count - 1)
+                    {
+                        <option value="@Model.Prices[i].Id">свыше @Model.Prices[i].Min грн/мес</option>
+                    }
+                    else
+                    {
+                        <option value="@Model.Prices[i].Id">@Model.Prices[i].Min-@Model.Prices[i].Max грн/мес</option>
+                    }*@
                     }
                 }
             </select>
