--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/NewB/_filters.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/NewB/_filters.cshtml
@@ -25,10 +25,11 @@
 
     <div class="_cost">
         <select id="price">
-            <option selected value="0">Цена за м²</option>
+            @*<option selected value="0">Цена за м²</option>*@
             @for (int i = 0; i < Model.Prices.Count; i++)
             {
-                if (i == 0)
+                <option value="@Model.Prices[i].Min">от @Model.Prices[i].Min грн/м²</option>
+                @*if (i == 0)
                 {
                     <option value="@Model.Prices[i].Id">до @Model.Prices[i].Max грн</option>
                 }
@@ -39,7 +40,26 @@
                 else
                 {
                     <option value="@Model.Prices[i].Id">@Model.Prices[i].Min-@Model.Prices[i].Max грн</option>
+                }*@
+            }
+        </select>
+        <select id="price_max">
+            @*<option selected value="0">Цена за м²</option>*@
+            @for (int i = 0; i < Model.Prices.Count; i++)
+            {
+                <option value="@Model.Prices[i].Min">до @Model.Prices[i].Min грн/м²</option>
+                @*if (i == 0)
+                {
+                    <option value="@Model.Prices[i].Id">до @Model.Prices[i].Max грн</option>
                 }
+                else if (i == Model.Prices.Count - 1)
+                {
+                    <option value="@Model.Prices[i].Id">свыше @Model.Prices[i].Min грн</option>
+                }
+                else
+                {
+                    <option value="@Model.Prices[i].Id">@Model.Prices[i].Min-@Model.Prices[i].Max грн</option>
+                }*@
             }
         </select>
     </div>
