--- a/ReHouse.FrontEnd/Views/Home/Contacts.cshtml
+++ b/ReHouse.FrontEnd/Views/Home/Contacts.cshtml
@@ -31,7 +31,7 @@
 
     <div class="about_company1">
         <h2>Одесский филиал:</h2>
-        <p>65058, г.Одесса, Шевченко проспект, 6/5</p>
+        <p>65058,г.Одесса,Шевченко проспект,6/5</p>
         <p>вход с проспекта Гагарина</p>
         <p>+380 (48) 788–67–07</p>
         <p>+380 (48) 796–46–43</p>
@@ -41,6 +41,9 @@
 <div id="map_company">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d687.1583056346718!2d30.748138929248427!3d46.45596399869532!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40c633d959ebd873%3A0xc31a18fbc02e9908!2z0L_RgNC-0YHQv9C10LrRgiDQk9Cw0LPQsNGA0ZbQvdCwLCA2LzUsINCe0LTQtdGB0LAsINCe0LTQtdGB0YzQutCwINC-0LHQu9Cw0YHRgtGMLCDQo9C60YDQsNGX0L3QsA!5e0!3m2!1suk!2sru!4v1492596754853" width="1065" height="495" frameborder="0" style="border:0" allowfullscreen></iframe>
 </div>
+<div id="mapnovostroy1">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d687.1583056346718!2d30.748138929248427!3d46.45596399869532!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40c633d959ebd873%3A0xc31a18fbc02e9908!2z0L_RgNC-0YHQv9C10LrRgiDQk9Cw0LPQsNGA0ZbQvdCwLCA2LzUsINCe0LTQtdGB0LAsINCe0LTQtdGB0YzQutCwINC-0LHQu9Cw0YHRgtGMLCDQo9C60YDQsNGX0L3QsA!5e0!3m2!1suk!2sru!4v1492596754853" width="700px" height="350px" frameborder="0" style="border:0" allowfullscreen></iframe>
+</div> 
 
 
 
