--- a/ReHouse.FrontEnd/Views/Rent/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/Rent/Detail.cshtml
@@ -28,17 +28,18 @@
     </script>
 }
 <span class="noprint">
+    <span class="none">
 
-    <div class="navigation_string">
-        <div class="way">
-            @Html.ActionLink("Главная", "Index", "Home")
-            <pre> </pre>
-            <p>/</p>
-            <pre> </pre>
+        <div class="navigation_string">
+            <div class="way">
+                @Html.ActionLink("Главная", "Index", "Home")
+                <pre> </pre>
+                <p>/</p>
+                <pre> </pre>
 
-            @{ string action = "", desc = "", pricePerSquere = ""; }
+                @{ string action = "", desc = "", pricePerSquere = ""; }
 
-            @switch (Model.Advert.Category.ParentId)
+                @switch (Model.Advert.Category.ParentId)
             {
                 case (int)ParrentCategories.Flat:
                     desc = "Снять квартиру";
@@ -58,19 +59,21 @@
                     break;
             }
 
-            @Html.ActionLink(desc, action, "rent")
-            <pre> </pre>
-            <p>/</p>
-            <pre> </pre>
-            <a href="~/rent/@action/@Model.Advert.Category.Id">@Model.Advert.Category.RussianName</a>
+                @Html.ActionLink(desc, action, "rent")
+                <pre> </pre>
+                <p>/</p>
+                <pre> </pre>
+                <a href="~/rent/@action/@Model.Advert.Category.Id">@Model.Advert.Category.RussianName</a>
+            </div>
         </div>
-    </div>
+    </span>
 </span>
 <div class="h2novostroy">
     @*<h2>Сдам @Model.Advert.Title.RussianName, @Model.Advert.Street</h2>*@
     <h2>@Model.Advert.TitleName, @Model.Advert.Street</h2>
     <div class="favorite">
         <a onclick="addtocart(@Model.Advert.Id, '@Model.Advert.Type', true, this);" id="favorite">Добавить в избранное</a>
+        <a onclick="addtocart(@Model.Advert.Id, '@Model.Advert.Type', true, this);" id="fav2"></a>
     </div>
     <div class="favorite1">
         <a href="~/email/index" id="favorite">Подать заявку</a>
@@ -209,14 +212,17 @@
     @if (!String.IsNullOrEmpty(Model.Advert.YouTubeUrl))
     {
 
-        <div class="video-youtube">
+        @*<div class="video-youtube">
             <iframe width="711" height="533" src="https://www.youtube.com/embed/@Model.Advert.YouTubeUrl" frameborder="0" allowfullscreen></iframe>
-        </div>
+        </div>*@
     }
     <div class="map_managercard">
         <div id="mapapart_prod">
 
             <iframe src="https://maps.google.com/maps?q=@Model.Advert.Latitude.ToString(CultureInfo.InvariantCulture),@Model.Advert.Longitude.ToString(CultureInfo.InvariantCulture)&hl=es;z=14&amp;output=embed" width="614px" height="428px" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+        <div id="mapnovostroy1">
+            <iframe src="https://maps.google.com/maps?q=@Model.Advert.Latitude.ToString(CultureInfo.InvariantCulture),@Model.Advert.Longitude.ToString(CultureInfo.InvariantCulture)&hl=es;z=14&amp;output=embed" width="700px" height="350px" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
 
         <div class="manager">
@@ -249,8 +255,10 @@
         </div>
     </div>
 
+    <span class="none">
 
-    <div class="h2prodsale"><h2>Новинки аренды</h2></div>
+        <div class="h2prodsale"><h2>Новинки аренды</h2></div>
+    </span>
     <div class="othernovostroy">
         <ul class="prods" id="data-container">
             @if (Model.OtherAdverts.Count > 0)
