--- a/ReHouse.FrontEnd/Views/Shared/Advert/_filters.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/Advert/_filters.cshtml
@@ -35,7 +35,7 @@
             {
                 if (ViewBag.Type == AdvertsType.Sale)
                 {
-                    <option value="@Model.Prices[i].Min">от @Model.Prices[i].Min $</option>
+                    <option value="@Model.Prices[i].Min">от @Model.Prices[i].Min</option>
                     @*if (i == 0)
                     {
                     <option value="@Model.Prices[i].Id">до @Model.Prices[i].Max $</option>
@@ -51,7 +51,7 @@
                 }
                 else if (ViewBag.Type == AdvertsType.Rent)
                 {
-                    <option value="@Model.Prices[i].Min">от @Model.Prices[i].Min грн/мес</option>
+                    <option value="@Model.Prices[i].Min">от @Model.Prices[i].Min</option>
                     @*if (i == 0)
                     {
                         <option value="@Model.Prices[i].Id">до @Model.Prices[i].Max грн/мес</option>
@@ -73,7 +73,7 @@
             {
                 if (ViewBag.Type == AdvertsType.Sale)
                 {
-                    <option value="@Model.Prices[i].Min">до @Model.Prices[i].Min $</option>
+                    <option value="@Model.Prices[i].Min">до @Model.Prices[i].Min</option>
                     @*if (i == 0)
                     {
                         <option value="@Model.Prices[i].Id">до @Model.Prices[i].Max $</option>
@@ -89,7 +89,7 @@
                 }
                 else if (ViewBag.Type == AdvertsType.Rent)
                 {
-                    <option value="@Model.Prices[i].Min">до @Model.Prices[i].Min грн/мес</option>
+                    <option value="@Model.Prices[i].Min">до @Model.Prices[i].Min</option>
                     @*if (i == 0)
                     {
                         <option value="@Model.Prices[i].Id">до @Model.Prices[i].Max грн/мес</option>
