--- a/ReHouse.FrontEnd/Views/NewBuilding/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/NewBuilding/Index.cshtml
@@ -32,7 +32,7 @@
             @*<option selected value="0">Цена за м² от</option>*@
             @for (int i = 0; i < Model.Prices.Count; i++)
             {
-                <option value="@Model.Prices[i].Min">от @Model.Prices[i].Min грн/м²</option>
+                <option value="@Model.Prices[i].Min">от @Model.Prices[i].Min</option>
                 @*if (i == 0)
                 {
                     <option value="@Model.Prices[i].Id">до @Model.Prices[i].Max грн</option>
@@ -51,7 +51,7 @@
             @*<option selected value="0">Цена за м² до</option>*@
             @for (int i = 0; i < Model.Prices.Count; i++)
             {
-                <option value="@Model.Prices[i].Min">до @Model.Prices[i].Min грн/м²</option>
+                <option value="@Model.Prices[i].Min">до @Model.Prices[i].Min</option>
                 @*if (i == 0)
                 {
                     <option value="@Model.Prices[i].Id">до @Model.Prices[i].Max грн</option>
