--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/NewBuilding/Edit.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/NewBuilding/Edit.cshtml
@@ -309,7 +309,10 @@
                             <td>@Html.CheckBoxFor(m => m.IsModerated)</td>
                         </tr>
                     }
-
+                    else
+                    {
+                        @Html.HiddenFor(m => m.IsModerated)
+                    }
                 }
                 <tr>
                     <td>Описание:</td>
