--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/Advert/_listOfAdverts.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/Advert/_listOfAdverts.cshtml
@@ -18,8 +18,8 @@
             }
             <td>
                 <div class="prod_info">
-                    @*<h3>@item.Title.RussianName</h3>*@
-                    <h3>@item.TitleName</h3>
+                    <h3>@item.Title.RussianName</h3>
+                    @*<h3>@item.TitleName</h3>*@
                     @*<img src="@Url.Content(prod.Image.Url+prod.Image.FileName)" width="50" height="50" alt="" />
     <img src="@Url.Content(prod.Image.Url+prod.Image.FileName)" width="50" height="50" alt="" />
     <img src="@Url.Content(prod.Image.Url+prod.Image.FileName)" width="50" height="50" alt="" />*@
