--- a/ReHouse.FrontEnd/Views/Home/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/Home/Index.cshtml
@@ -59,8 +59,8 @@
                         <div class="min-content">
                             <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"></div>
 
-                            @*<h3>Продам @item.Title.RussianName.ToLower()</h3>*@
-                            <h3>@item.TitleName</h3>
+                            <h3>Продам @item.Title.RussianName.ToLower()</h3>
+                            @*<h3>@item.TitleName</h3>*@
                             <h4>@item.Description</h4>
                             <p class="cost">@item.Price $</p>
                             <a href="~/sale/detail/@item.Id" id="follow">❯</a>
@@ -78,8 +78,8 @@
                         }
                         <div class="min-content">
                             <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"></div>
-                            @*<h3>Сдам @item.Title.RussianName.ToLower()</h3>*@
-                            <h3>@item.TitleName</h3>
+                            <h3>Сдам @item.Title.RussianName.ToLower()</h3>
+                            @*<h3>@item.TitleName</h3>*@
                             <h4>@item.Description</h4>
                             <p class="cost">@item.Price грн/мес</p>
                             <a href="~/rent/detail/@item.Id" id="follow">❯</a>
@@ -161,8 +161,8 @@
                     }
                     <div class="min-content">
                         <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"></div>
-                        @*<h3>Продам @item.Title.RussianName.ToLower()</h3>*@
-                        <h3>@item.TitleName</h3>
+                        <h3>Продам @item.Title.RussianName.ToLower()</h3>
+                        @*<h3>@item.TitleName</h3>*@
                         <h4>@item.Description</h4>
                         <p class="cost">@item.Price $</p>
                         <a href="~/sale/detail/@item.Id" id="follow">❯</a>
@@ -203,8 +203,8 @@
                     }
                     <div class="min-content">
                         <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"></div>
-                        @*<h3>Продам @item.Title.RussianName.ToLower()</h3>*@
-                        <h3>@item.TitleName</h3>
+                        <h3>Продам @item.Title.RussianName.ToLower()</h3>
+                        @*<h3>@item.TitleName</h3>*@
                         <h4>@item.Description</h4>
                         <p class="cost">@item.Price $</p>
                         <a href="~/sale/detail/@item.Id" id="follow">❯</a>
