--- a/ReHouse.FrontEnd/Views/Shared/Vacancy/_listOfVacancies.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/Vacancy/_listOfVacancies.cshtml
@@ -8,6 +8,6 @@
         <div class="call_us">
             <p>@vacancy.Title</p>
         </div>
-        <p>@vacancy.Description</p>        
+        <p>@Html.Raw(vacancy.Description)</p>        
     }
 }
