--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Rent/Add.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Rent/Add.cshtml
@@ -310,18 +310,18 @@
                         <td>@Html.DropDownListFor(m => m.CategoryId, new SelectList(ViewBag.Categories, "Id", "RussianName"))</td>
                     </tr>
                 }
-                @*@if (ViewBag.Titles != null && ViewBag.Titles.Count > 0)
+                @if (ViewBag.Titles != null && ViewBag.Titles.Count > 0)
                 {
                     <tr>
                         <td>Заголовок:</td>
                         <td>@Html.DropDownListFor(m => m.TitleId, new SelectList(ViewBag.Titles, "Id", "RussianName"))</td>
                     </tr>
-                }*@
+                }
                 
-                    <tr>
+                    @*<tr>
                         <td>Заголовок:</td>
                         <td>@Html.TextBoxFor(m => m.TitleName)</td>
-                    </tr>
+                    </tr>*@
                 
                 @if (ViewBag.Districts != null && ViewBag.Districts.Count > 0)
                 {
