--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Rent/Edit.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Rent/Edit.cshtml
@@ -2,12 +2,10 @@
 @using ReHouse.Utils.DataBase.AdvertParams
 @using System.Globalization;
 @using ReHouse.FrontEnd.Models
-
 @model Advert
 @{
-            Layout = "~/Areas/Cabinet/Views/Shared/_Layout.cshtml";
+    Layout = "~/Areas/Cabinet/Views/Shared/_Layout.cshtml";
 }
-
 <style>
     #map {
         width: 614px;
@@ -15,9 +13,8 @@
         border: 0;
     }
 </style>
-
 @section scripts {
-@Scripts.Render("~/bundles/imageLoader")
+    @Scripts.Render("~/bundles/imageLoader")
     @Scripts.Render("~/bundles/slides")
     @Scripts.Render("~/bundles/deleteImage")
     <script>
@@ -34,9 +31,7 @@
             });
         });
     </script>
-
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyDV3GzGjYIAyhiMq9Cof5SEZDuh0QeBD0Q&libraries=places&language=ru"></script>
-
     <script>
 
 
@@ -250,7 +245,6 @@
 
     </script>
 }
-
 <div class="list_">
     <h2 class="tabset_label">Table of Contents</h2>
     <ul class="tabset_tabs">
@@ -264,7 +258,6 @@
                 <li><a href="~/cabinet/sale/commerce">Коммерция</a></li>
             </ol>
         </li>
-
         <li>
             <a class="preActive active">Аренда</a>
             <ol>
@@ -284,7 +277,6 @@
 </div>
 <div id="adminka1" class="tabset_content tabset_content_active">
     <h2 class="tabset_label">adminka</h2>
-
     <form enctype="multipart/form-data" action="" method="POST">
         @Html.AntiForgeryToken()
         @Html.HiddenFor(m => m.Id)
@@ -303,6 +295,10 @@
                             <td>@Html.CheckBoxFor(m => m.IsModerated)</td>
                         </tr>
                     }
+                    else
+                    {
+                        @Html.HiddenFor(m => m.IsModerated)
+                    }
 
                 }
                 <tr>
@@ -320,17 +316,17 @@
                         <td>@Html.DropDownListFor(m => m.CategoryId, new SelectList(ViewBag.Categories, "Id", "RussianName"))</td>
                     </tr>
                 }
-                @*@if (ViewBag.Titles != null && ViewBag.Titles.Count > 0)
+                @if (ViewBag.Titles != null && ViewBag.Titles.Count > 0)
                 {
                     <tr>
                         <td>Заголовок:</td>
                         <td>@Html.DropDownListFor(m => m.TitleId, new SelectList(ViewBag.Titles, "Id", "RussianName"))</td>
                     </tr>
-                }*@
-                <tr>
-                    <td>Заголовок:</td>
-                    <td>@Html.TextBoxFor(m => m.TitleName)</td>
-                </tr>
+                }
+                @*<tr>
+                        <td>Заголовок:</td>
+                        <td>@Html.TextBoxFor(m => m.TitleName)</td>
+                    </tr>*@
                 @if (ViewBag.Districts != null && ViewBag.Districts.Count > 0)
                 {
                     <tr>
@@ -346,12 +342,10 @@
                     <td>Описание:</td>
                     <td>@Html.TextAreaFor(m => m.Description, new { @rows = "20" })</td>
                 </tr>
-
                 <tr>
                     <td>Адрес:</td>
                     <td>@Html.TextBoxFor(m => m.Street)</td>
                 </tr>
-
                 <tr>
                     <td>YouTube:</td>
                     <td>@Html.TextBoxFor(m => m.YouTubeUrl)</td>
@@ -363,7 +357,6 @@
                         <td>@Html.DropDownListFor(m => m.MarketTypeId, new SelectList(ViewBag.MarketTypes, "Id", "RussianName"))</td>
                     </tr>
                 }
-
                 @if (Model.Category.ParentId != (int)ParrentCategories.Homestead)
                 {
                     if (ViewBag.TrimConditions != null && ViewBag.TrimConditions.Count > 0)
@@ -374,7 +367,6 @@
                         </tr>
                     }
                 }
-
                 @if (Model.AdvertPropertyValues != null && Model.AdvertPropertyValues.Count > 0)
                 {
                     for (var i = 0; i < Model.AdvertPropertyValues.Count; i++)
@@ -408,7 +400,6 @@
                 <output id="list"></output>
             </div>
             <h3>Планировки</h3>
-
             @if (Model.PlanImages != null && Model.PlanImages.Count > 0)
             {
                 <div class="add_photo">
@@ -431,7 +422,6 @@
             <button type="submit">Сохранить</button>
         </div>
     </form>
-
     <div class="map_managercard">
         <div id="mapapart_prod">
             <input type="text" id="pac-input" style="top: 25px; height: 30px; font-size: 16px; padding: 5px; width: 300px; margin-top: 11px;" value="" />
@@ -440,6 +430,3 @@
         </div>
     </div>
 </div>
-
-
-
