--- a/ReHouse.FrontEnd/Views/Manager/Profile.cshtml
+++ b/ReHouse.FrontEnd/Views/Manager/Profile.cshtml
@@ -79,8 +79,8 @@
                             <div class="min-content">
                                 <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"></div>
 
-                                @*<h3>Продам @item.Title.RussianName.ToLower()</h3>*@
-                                <h3>@item.TitleName</h3>
+                                <h3>Продам @item.Title.RussianName.ToLower()</h3>
+                                @*<h3>@item.TitleName</h3>*@
                                 <h4>@item.Description</h4>
                                 <p class="cost">@item.Price $</p>
                                 <a href="~/sale/detail/@item.Id" id="follow">❯</a>
@@ -99,8 +99,8 @@
                             }
                             <div class="min-content">
                                 <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"></div>
-                                @*<h3>Сдам @item.Title.RussianName.ToLower()</h3>*@
-                                <h3>@item.TitleName</h3>
+                                <h3>Сдам @item.Title.RussianName.ToLower()</h3>
+                                @*<h3>@item.TitleName</h3>*@
                                 <h4>@item.Description</h4>
                                 <p class="cost">@item.Price грн/мес</p>
                                 <a href="~/rent/detail/@item.Id" id="follow">❯</a>
